--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ function carousel() {
     <div class="notiglow"></div>
     <div class="notiborderglow"></div>
     <div class="notititle">Hey! You..</div>
-    <div class="notibody">Have you done art today?</div>
+    <div class="notibody">Have you done art today?<br>Can I inspire you?</div>
   </div>
 
 
