--- a/index.html
+++ b/index.html
@@ -455,6 +455,23 @@ function carousel() {
 
 
 
+    
+<div class="word">
+  <span>A</span>
+  <span>R</span>
+  <span>T</span>
+  
+</div>
+
+
+
+
+    
+
+
+
+
+
 
 
 
