--- a/index.html
+++ b/index.html
@@ -457,10 +457,12 @@ function carousel() {
 
     
 <div class="word">
-  <span>A</span>
+  <span>C</span>
   <span>R</span>
+  <span>E</span>
+  <span>A</span>
   <span>T</span>
-  
+  <span>E</span>
 </div>
 
 
