--- a/index.html
+++ b/index.html
@@ -159,7 +159,14 @@ function carousel() {
 
 
 
-
+<div class="word">
+  <span>D</span>
+  <span>R</span>
+  <span>E</span>
+  <span>A</span>
+  <span>M</span>
+  
+</div>
 
 
 
@@ -196,6 +203,14 @@ function carousel() {
   
 
 
+    <div class="word">
+  <span>C</span>
+  <span>R</span>
+  <span>E</span>
+  <span>A</span>
+  <span>T</span>
+  <span>E</span>
+</div>
 
 
 
@@ -337,6 +352,15 @@ function carousel() {
 
 
 
+    <div class="word">
+  <span>I</span>
+  <span>N</span>
+  <span>S</span>
+  <span>P</span>
+  <span>I</span>
+  <span>R</span>
+  <span>E</span>
+</div>
 
 
 
@@ -484,14 +508,7 @@ function carousel() {
 
 
     
-<div class="word">
-  <span>C</span>
-  <span>R</span>
-  <span>E</span>
-  <span>A</span>
-  <span>T</span>
-  <span>E</span>
-</div>
+
 
 
 
