--- a/index.html
+++ b/index.html
@@ -25,12 +25,11 @@
 
 
 
-<div class="button">
-<button class="button" data-text="Awesome">
-    <span class="actual-text">&nbsp;Fatimakassem&nbsp;</span>
-    <span aria-hidden="true" class="hover-text">&nbsp;Fatimakassem&nbsp;</span>
-</button>
-</div>
+
+<div class="textloader">
+  <span class="textloader-text">ByFatimaKassem</span>
+  </div>
+
 
 
 
