--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ function carousel() {
                     </p>
             </div>
             <div class="staff-col">
-                <img src="images/image1.jpg">
+                <img src="images/image1.jpeg">
             </div>
         </div>
         <div class="mess"><a href="gallery.html" class="hero-btn">Check All Paintings !</a></div>
@@ -326,7 +326,7 @@ function carousel() {
                 </p>
         </div>
         <div class="staff-col">
-            <img src="images/image2.jpg">
+            <img src="images/image2.jpeg">
         </div>
     </div>
     <div class="mess"><a href="gallery.html" class="hero-btn">See More</a></div>
