--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
       
 
 <div class="w3-content w3-section" style="max-width:700px">
-  <img class="mySlides" src="images/im4.webp" style="width:100%">
-  <img class="mySlides" src="images/im2.jpg" style="width:100%">
-  <img class="mySlides" src="images/im3.jpg" style="width:100%">
+  <img class="mySlides"  loading="lazy" src="images/im4.webp" style="width:100%">
+  <img class="mySlides"  loading="lazy" src="images/im2.jpg" style="width:100%">
+  <img class="mySlides"  loading="lazy" src="images/im3.jpg" style="width:100%">
 </div>
 
 <script>
