--- a/index.html
+++ b/index.html
@@ -20,15 +20,13 @@
 
 
 
-<div class="loader"><span class="loader"></span></div>
-
-
-
-
-
-<div class="textloader">
-  <span class="textloader-text">ByFatimaKassem</span>
+<div class="loader-container">
+  <div class="loader"></div>
+  <div class="textloader">
+    <span class="textloader-text">ByFatimaKassem</span>
   </div>
+</div>
+
 
 
 
